# miniC

./: CMakeLists.txt
.github/workflows/: build.yml
miniCapp/: CMakeLists.txt  main.c
miniClib/: CMakeLists.txt  miniCConfig.h.in  square.c  square.h
miniCtest/: CMakeLists.txt  square_test.cpp
